--- a/Backend/assets/css/style.css
+++ b/Backend/assets/css/style.css
@@ -1,4 +1,4 @@
-.login-container {
+.container {
     width: 300px;
     margin: 0 auto;
     padding: 20px;
@@ -6,7 +6,7 @@
     border-radius: 5px;
 }
 
-input {
+input, select {
     width: 100%;
     margin-bottom: 10px;
     padding: 8px;
