--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,13 @@
+:root{
+    --primary: #88D9FD;
+    --action: #007bff;
+}
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0;
+    margin:0;
+}
+
 .container {
     width: 300px;
     margin: 0 auto;
@@ -15,7 +25,7 @@ input, select {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: var(--action);
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -30,9 +40,57 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    background-color: #0056b3;
+}
+header{
+    font-size: 0.85rem;
+    color: #fff;
+    padding: 20px;
+    margin-bottom: 50px;
+}
+header a{
+    text-decoration: none;
+    color: #fff;
 }
 header li{
     list-style: none;
     display: inline;
     margin-left: 10px;
+    padding: 10px;
+    border-radius: 12px;
+}
+header li:hover{
+    background-color: #007bff;
+}
+header img{
+    max-width: 50px;
+}
+section{
+    width: 80%;
+    margin:auto;
+    margin-bottom: 50px;
+}
+.section-container{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    gap: 1rem;
+}
+.section-container img{
+    max-width: 400px;
+}
+.div-tabela{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border-radius: 5px;
+}
+.div-tabela:nth-child(odd){
+    background-color: #ccc;
+}
+.cabecalho-tabela{
+    font-weight: 700;
+    font-size: 1.1rem;
 }
