--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,6 @@
 :root{
     --primary: #88D9FD;
+    --secondary: #66B7DB;
     --action: #007bff;
 }
 *{
@@ -22,6 +23,10 @@ input, select {
     padding: 8px;
 }
 
+.input-group{
+    margin: 10px 0;
+}
+
 button {
     width: 100%;
     padding: 10px;
@@ -30,6 +35,7 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-bottom: 15px;
 }
 
 button:hover {
@@ -58,6 +64,7 @@ header li{
     margin-left: 10px;
     padding: 10px;
     border-radius: 12px;
+    transition: all ease-in-out 300ms;
 }
 header li:hover{
     background-color: #007bff;
@@ -80,14 +87,17 @@ section{
 .section-container img{
     max-width: 400px;
 }
-.div-tabela{
+.tabela{
     width: 90%;
-    display: flex;
-    justify-content: space-between;
     padding: 10px;
     border-radius: 5px;
+    text-align: center;
+    border: #ccc solid 1px;
 }
-.div-tabela:nth-child(odd){
+.tabela td{
+    padding: 10px;
+}
+.tabela tbody tr:nth-child(odd){
     background-color: #ccc;
 }
 .cabecalho-tabela{
