--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -100,6 +100,9 @@ section{
 .tabela tbody tr:nth-child(odd){
     background-color: #ccc;
 }
+.tabela tbody tr:hover{
+    background-color: #AAAAAA;
+}
 .cabecalho-tabela{
     font-weight: 700;
     font-size: 1.1rem;
